# fcitx5-eurolatin-sil

./: CMakeLists.txt  README.md
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  eurolatin-sil-addon.conf.in  eurolatin-sil.conf  eurolatin-sil.cpp  eurolatin-sil.hpp  install_manifest.txt
src/src/: Makefile  cmake_install.cmake  eurolatin-sil-addon.conf
